--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -9,12 +9,12 @@ ms.prod: asp.net-core
 ms.technology: aspnet
 ms.topic: article
 uid: migration/20_21
-ms.openlocfilehash: e7580140dd058f8cb6dd83e944ebc4dc3269efe1
-ms.sourcegitcommit: 43bd79667bbdc8a07bd39fb4cd6f7ad3e70212fb
+ms.openlocfilehash: 4e201bdd6396ebabf925571a92563ba0bba53421
+ms.sourcegitcommit: 40b102ecf88e53d9d872603ce6f3f7044bca95ce
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/04/2018
-ms.locfileid: "34729767"
+ms.lasthandoff: 06/15/2018
+ms.locfileid: "35652157"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer à partir de ASP.NET 2.0 vers 2.1
 
@@ -105,7 +105,7 @@ ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/id
   * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr).
   * jQuery remplace 2.2.0 3.3.1
 
-###  <a name="validationscriptspartialcshtml"></a>_ValidationScriptsPartial.cshtml
+### <a name="validationscriptspartialcshtml"></a>_ValidationScriptsPartial.cshtml
 
 * *Pages/_ValidationScriptsPartial.cshtml* déplace vers *Pages/Shared/_ValidationScriptsPartial.cshtml*
 * *jQuery.Validate/1.14.0* devient *jquery.validate/1.17.0*
@@ -140,3 +140,8 @@ Les éléments suivants sont ajoutés :
 * Le `Privacy` méthode d’action est ajoutée pour le contrôleur Home.
 
 Consultez [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
+
+## <a name="additional-changes"></a>Modifications supplémentaires
+
+* [SetCompatibilityVersion](xref:fundamentals/startup#setcompatibilityversion)
+* [Configuration de transport](xref:fundamentals/servers/kestrel#transport-configuration)
