commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -2,19 +2,15 @@
 title: Migrer à partir de ASP.NET 2.0 vers 2.1
 author: rick-anderson
 description: Cet article décrit les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 vers 2.1.
-manager: wpickett
 ms.author: riande
-ms.date: 5/30/2018
-ms.prod: asp.net-core
-ms.technology: aspnet
-ms.topic: article
+ms.date: 05/30/2018
 uid: migration/20_21
-ms.openlocfilehash: 4e201bdd6396ebabf925571a92563ba0bba53421
-ms.sourcegitcommit: 40b102ecf88e53d9d872603ce6f3f7044bca95ce
+ms.openlocfilehash: 52fc34731b036e4e805eedc01573bee65cdfe197
+ms.sourcegitcommit: a1afd04758e663d7062a5bfa8a0d4dca38f42afc
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/15/2018
-ms.locfileid: "35652157"
+ms.lasthandoff: 06/20/2018
+ms.locfileid: "36274273"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer à partir de ASP.NET 2.0 vers 2.1
 
@@ -55,6 +51,28 @@ Le balisage suivant montre le modèle généré 2.1 *.csproj* fichier projet :
 
 [!code-xml[Main](20_21/sample/WebApp21.csproj)]
 
+## <a name="rules-for-projects-targeting-the-shared-runtime"></a>Règles pour les projets qui ciblent le runtime partagé
+
+ASP.NET Core inclut les runtimes partagés suivants :
+
+* [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app)
+* [Microsoft.AspNetCore.All](xref:fundamentals/metapackage)
+
+Règles pour les projets qui ciblent le runtime partagé :
+
+* Les projets référençant `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` doit faire référence à des packages, `Microsoft.Net.Sdk.Web` Kit de développement logiciel.
+* Projets faisant référence à des packages ou des projets qui font référence à transitivement `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`:
+  * Doit faire référence à la `Microsoft.Net.Sdk.Web` Kit de développement logiciel et,
+  * Doit référencer le même package d’exécution partagé. Par exemple, si LibraryA fait référence à `Microsoft.AspNetCore.App`, doivent faire référence à tous les projets référençant `Microsoft.AspNetCore.App`.
+* Projets exécutables :
+  * Sont des projets qui contiennent des applications qui sont lancées avec `dotnet run`.
+  * Sont des applications qui s’exécutent et de projets pour les applications de test.
+  * Projets exécutables ne doivent pas spécifier la version. Le Kit de développement spécifie la version implicitement via `<PackageReference Include="Microsoft.AspNetCore.App" />`.
+* Les projets référencés, c'est-à-dire :
+  * Les projets qui ne sont pas le point d’entrée, et
+  * Les références de projet `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`.
+  * Projets référencés doivent spécifier une version du package.
+
 ## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications apportées à tirer parti des nouvelle idiomes basée sur le code qui sont recommandés dans ASP.NET Core 2.1
 
 ### <a name="changes-to-main"></a>Modifications apportées à la Main
@@ -90,7 +108,7 @@ Les modifications de code précédent sont détaillées dans :
 
 ### <a name="changes-to-authentication-code"></a>Modifications apportées au code d’authentification
 
-ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/identity) comme un [bibliothèque de classes Razor](xref:mvc/razor-pages/ui-class). Si vous n’avez pas apporté importantes modifications au modèle 2.0 généré code d’identité, envisagez l’approche de mise à niveau suivante :
+ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/identity) comme un [bibliothèque de classes Razor](xref:razor-pages/ui-class). Si vous n’avez pas apporté importantes modifications au modèle 2.0 généré code d’identité, envisagez l’approche de mise à niveau suivante :
 
 * Supprimer votre code d’identité existant.
 * [Structurez identité](xref:security/authentication/scaffold-identity) dans votre projet.
