--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -5,12 +5,12 @@ description: Cet article décrit les principes fondamentaux de la migration d’
 ms.author: riande
 ms.date: 05/30/2018
 uid: migration/20_21
-ms.openlocfilehash: 52fc34731b036e4e805eedc01573bee65cdfe197
-ms.sourcegitcommit: a1afd04758e663d7062a5bfa8a0d4dca38f42afc
+ms.openlocfilehash: d306ea72cd785cab5968a78f746cb742881c08bf
+ms.sourcegitcommit: 356c8d394aaf384c834e9c90cabab43bfe36e063
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/20/2018
-ms.locfileid: "36274273"
+ms.lasthandoff: 06/26/2018
+ms.locfileid: "36961475"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer à partir de ASP.NET 2.0 vers 2.1
 
@@ -106,18 +106,75 @@ Les modifications de code précédent sont détaillées dans :
 * [Exiger HTTPS](xref:security/enforcing-ssl#require-https) pour `UseHttpsRedirection`.
 * [SetCompatibilityVersion](xref:fundamentals/startup#setcompatibilityversion) pour `SetCompatibilityVersion(CompatibilityVersion.Version_2_1)`.
 
-### <a name="changes-to-authentication-code"></a>Modifications apportées au code d’authentification
+## <a name="changes-to-authentication-code"></a>Modifications apportées au code d’authentification
 
-ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/identity) comme un [bibliothèque de classes Razor](xref:razor-pages/ui-class). Si vous n’avez pas apporté importantes modifications au modèle 2.0 généré code d’identité, envisagez l’approche de mise à niveau suivante :
+ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/identity) comme un [bibliothèque de classes Razor](xref:razor-pages/ui-class) (RCL).
 
-* Supprimer votre code d’identité existant.
-* [Structurez identité](xref:security/authentication/scaffold-identity) dans votre projet.
+La valeur par défaut 2.1 l’interface utilisateur de l’identité ne fournit actuellement les nouvelles fonctionnalités importantes sur la version 2.0. Remplacement d’identité avec le package RCL est facultative. Les avantages liés au remplacement du modèle généré identité code avec la version RCL incluent :
+
+* Nombre de fichiers est déplacé en dehors de votre arborescence source.
+* Toutes les résolutions de bogues ou les nouvelles fonctionnalités permettant d’identité sont incluses dans le [Microsoft.AspNetCore.App metapackage](xref:fundamentals/metapackage-app). Vous obtenez automatiquement l’identité mise à jour lorsque `Microsoft.AspNetCore.App` est mis à jour.
+
+Si vous avez apporté non trivial identité code généré par les modifications apportées au modèle :
+
+* Les avantages ci-dessus ne justifient pas convertir le la version RCL.
+* Vous pouvez conserver votre code ASP.NET Core 2.0 Identity, il est entièrement pris en charge.
+
+Identité 2.1 expose les points de terminaison avec le `Identity` zone. Par exemple, le tableau suivant présente des exemples de points de terminaison d’identité qui changent de 2.0 à 2.1 :
+
+| VERSION 2.0 URL DE LA         | 2.1 URL |
+| --------------- | ------------ |
+| / / Connexion au compte  | / / Compte/connexion de l’identité |
+| / Compte/déconnexion | / Identité/compte/déconnexion |
+| / Compte/gérer | / Identité/compte/gérer |
+
+Les applications qui ont le code à l’aide d’identité et 2.0 de remplacer l’interface utilisateur de l’identité à la nécessité d’identité bibliothèque 2.1 pour prendre en compte les URL d’identité ont `/Identity` segment ajouté à l’URI. Pour gérer les nouveaux points de terminaison identité consiste à configurer redirections, par exemple, à partir de `/Account/Login` à `/Identity/Account/Login`.
+
+### <a name="update-identity-to-version-21"></a>Identité de mise à jour vers la version 2.1
+
+Les options suivantes sont disponibles pour mettre à jour d’identité à 2.1.
+
+* Utilisez le code de l’identité UI 2.0 sans aucune modification. À l’aide de code 2.0 de l’interface utilisateur d’identité est entièrement pris en charge. Il s’agit d’une bonne approche lorsque significatif modifications ont été apportées au code généré d’identité.
+* Supprimer votre code d’identité 2.0 existant et [Scaffold identité](xref:security/authentication/scaffold-identity) dans votre projet. Votre projet utilise le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Vous pouvez générer du code et l’interface utilisateur pour le code de l’interface utilisateur de l’identité que vous avez modifié. Appliquer vos modifications du code pour le code de l’interface utilisateur qui vient d’être modèle généré automatiquement.
+* Supprimer votre code d’identité 2.0 existant et [Scaffold identité](xref:security/authentication/scaffold-identity) dans votre projet avec l’option de **remplacer tous les fichiers**.
+
+### <a name="replace-identity-20-ui-with-the-identity-21-razor-class-library"></a>Remplacez l’identité 2.0 l’interface utilisateur avec la bibliothèque de classes de Razor identité 2.1
+
+Cette section décrit les étapes pour remplacer le code d’identité ASP.NET Core 2.0 modèle généré avec la [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Les étapes suivantes sont pour un projet de Pages Razor, mais l’approche pour un projet MVC est similaire.
+
+* Vérifiez le [fichier projet est mis à jour pour utiliser les 2.1 versions](#update-the-project-file-to-use-21-versions)
+* Supprimez les dossiers suivants et tous les fichiers dans les :
+  * *Contrôleurs*
+  * *Pages ou du compte /*
+  * *Extensions*
+* Générez le projet.
+* [Structurez identité](xref:security/authentication/scaffold-identity) dans votre projet :
+  * Sélectionnez les projets en cours de fermeture *_Layout.cshtml* fichier.
+  * Sélectionnez le **+** icône sur le côté droit de la **classe de contexte de données**. Acceptez le nom par défaut.
+  * Sélectionnez **ajouter** pour créer une nouvelle classe de contexte de données. Création d’un nouveau contexte de données est requis pour structurer. Vous supprimez le nouveau contexte de données dans la section suivante.
+
+### <a name="update-after-scaffolding-identity"></a>Mettre à jour après la génération de modèles automatique identité
+
+* Supprimer le scaffolder d’identité générée `IdentityDbContext` classe dérivée dans la *zones / / donnéesd’identité/* dossier.
+* Supprimer *Areas/Identity/IdentityHostingStartup.cs*
+* Mise à jour la *_LoginPartial.cshtml* fichier :
+  * Déplacer *Pages/_LoginPartial.cshtml* à *Pages/Shared/_LoginPartial.cshtml*
+  * Ajoutez `asp-area="Identity"` aux liens achor et du formulaire.
+  * Mise à jour le `<form />` élément à `    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`
+
+  Le code suivant illustre la mise à jour *_LoginPartial.cshtml* fichier :
+
+  [!code-cshtml[Main](20_21/sample/_LoginPartial.cshtml?highlight=8,11,22,23)]
+
+Mise à jour `ConfigureServices` par le code suivant :
+
+[!code-csharp[Main](20_21/sample/Startup2.cs?name=snippet)]
 
 ## <a name="changes-to-razor-pages-projects-razor-files"></a>Modifie les projets de fichiers Razor pour les Pages Razor
 
 ### <a name="the-layout-file"></a>Le fichier de disposition
 
-* *Pages/_Layout.cshtml* déplace vers *Pages/Shared/_Layout.cshtml*
+* Déplacer *Pages/_Layout.cshtml* à *Pages/Shared/_Layout.cshtml*
 * Le *Layout.cshtml* fichier comprend les modifications suivantes :
 
   * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr).
