commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -5,12 +5,12 @@ description: Cet article décrit les principes fondamentaux de la migration d’
 ms.author: riande
 ms.date: 05/30/2018
 uid: migration/20_21
-ms.openlocfilehash: d306ea72cd785cab5968a78f746cb742881c08bf
-ms.sourcegitcommit: 356c8d394aaf384c834e9c90cabab43bfe36e063
+ms.openlocfilehash: 8d27d916b04c12c17c0054de8392408f751b6990
+ms.sourcegitcommit: 1faf2525902236428dae6a59e375519bafd5d6d7
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/26/2018
-ms.locfileid: "36961475"
+ms.lasthandoff: 06/28/2018
+ms.locfileid: "37089891"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer à partir de ASP.NET 2.0 vers 2.1
 
@@ -60,18 +60,12 @@ ASP.NET Core inclut les runtimes partagés suivants :
 
 Règles pour les projets qui ciblent le runtime partagé :
 
-* Les projets référençant `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` doit faire référence à des packages, `Microsoft.Net.Sdk.Web` Kit de développement logiciel.
+* Projets faisant référence à la `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` packages doivent la valeur SDK du projet `Microsoft.NET.Sdk.Web` en haut du fichier projet (`<Project Sdk="Microsoft.NET.Sdk.Web">`).
 * Projets faisant référence à des packages ou des projets qui font référence à transitivement `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`:
-  * Doit faire référence à la `Microsoft.Net.Sdk.Web` Kit de développement logiciel et,
-  * Doit référencer le même package d’exécution partagé. Par exemple, si LibraryA fait référence à `Microsoft.AspNetCore.App`, doivent faire référence à tous les projets référençant `Microsoft.AspNetCore.App`.
-* Projets exécutables :
-  * Sont des projets qui contiennent des applications qui sont lancées avec `dotnet run`.
-  * Sont des applications qui s’exécutent et de projets pour les applications de test.
-  * Projets exécutables ne doivent pas spécifier la version. Le Kit de développement spécifie la version implicitement via `<PackageReference Include="Microsoft.AspNetCore.App" />`.
-* Les projets référencés, c'est-à-dire :
-  * Les projets qui ne sont pas le point d’entrée, et
-  * Les références de projet `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`.
-  * Projets référencés doivent spécifier une version du package.
+  * Doit définir le Kit de développement du projet `Microsoft.NET.Sdk.Web` en haut du fichier projet (`<Project Sdk="Microsoft.NET.Sdk.Web">`).
+  * Doit référencer le même package d’exécution partagé. Si LibraryA fait référence à `Microsoft.AspNetCore.App`, tous les projets référençant LibraryA doivent également référencer `Microsoft.AspNetCore.App`.
+* Projets exécutables (projets qui contiennent des applications qui sont lancées avec `dotnet run` ou applications qui s’exécutent et tester des projets pour les applications) ne doit pas spécifier une version pour `Microsoft.AspNetCore.App`. Le Kit de développement spécifie la version implicitement via `<PackageReference Include="Microsoft.AspNetCore.App" />`.
+* Projets référencés (projets qui ne sont pas le point d’entrée et les références de projet `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`) doit spécifier une version du package.
 
 ## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications apportées à tirer parti des nouvelle idiomes basée sur le code qui sont recommandés dans ASP.NET Core 2.1
 
@@ -177,7 +171,7 @@ Mise à jour `ConfigureServices` par le code suivant :
 * Déplacer *Pages/_Layout.cshtml* à *Pages/Shared/_Layout.cshtml*
 * Le *Layout.cshtml* fichier comprend les modifications suivantes :
 
-  * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr).
+  * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [Prise en charge du RGPD dans ASP.NET Core](xref:security/gdpr).
   * jQuery remplace 2.2.0 3.3.1
 
 ### <a name="validationscriptspartialcshtml"></a>_ValidationScriptsPartial.cshtml
