commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -1,81 +1,90 @@
 ---
-title: Migrer à partir de ASP.NET 2.0 vers 2.1
+title: Migrer d’ASP.NET Core 2.0 vers 2.1
 author: rick-anderson
-description: Cet article décrit les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 vers 2.1.
+description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
-ms.date: 05/30/2018
+ms.date: 07/10/2018
 uid: migration/20_21
-ms.openlocfilehash: 8d27d916b04c12c17c0054de8392408f751b6990
-ms.sourcegitcommit: 1faf2525902236428dae6a59e375519bafd5d6d7
+ms.openlocfilehash: 392771bc1fdd348834a8b0f877d455e0fc9c7c6c
+ms.sourcegitcommit: 19cbda409bdbbe42553dc385ea72d2a8e246509c
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 06/28/2018
-ms.locfileid: "37089891"
+ms.lasthandoff: 07/12/2018
+ms.locfileid: "38992975"
 ---
-# <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer à partir de ASP.NET 2.0 vers 2.1
+# <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
 Par [Rick Anderson](https://twitter.com/RickAndMSFT)
 
-Consultez [Nouveautés de ASP.NET Core 2.1](xref:aspnetcore-2.1) pour une vue d’ensemble des nouvelles fonctionnalités dans ASP.NET Core 2.1.
+Consultez [quelles sont les nouveautés dans ASP.NET Core 2.1](xref:aspnetcore-2.1) pour une vue d’ensemble des nouvelles fonctionnalités dans ASP.NET Core 2.1.
 
 Cet article :
 
-* Décrit les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 vers 2.1.
+* Couvre les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 * Fournit une vue d’ensemble des modifications pour les modèles d’application web ASP.NET Core.
 
 Un moyen rapide d’obtenir une vue d’ensemble des modifications dans 2.1 consiste à :
 
-* Créer une application de web ASP.NET Core 2.0 nommée WebApp1.
-* Valider le WebApp1 dans un système de contrôle de code source.
-* Supprimer WebApp1 et créer une application de web ASP.NET Core 2.1 nommée WebApp1 au même endroit.
-* Passez en revue les modifications apportées à la version 2.1.
+* Créer une application web de ASP.NET Core 2.0 appelée application Web 1.
+* Valider l’application Web 1 dans un système de contrôle de code source.
+* Supprimer l’application Web 1 et créer une application web de ASP.NET Core 2.1 appelée application Web 1 au même endroit.
+* Passez en revue les modifications dans la version 2.1.
 
-Cet article fournit une vue d’ensemble sur la migration vers ASP.NET Core 2.1. Il ne contient pas une liste complète de toutes les modifications nécessaires pour la migration vers la version 2.1. Certains projets peuvent nécessiter des étapes plus selon les options sélectionnées lors de la création du projet et les modifications apportées au projet.
+Cet article fournit une vue d’ensemble sur la migration vers ASP.NET Core 2.1. Il ne contient pas une liste complète de toutes les modifications nécessaires pour migrer vers la version 2.1. Certains projets peuvent nécessiter des étapes plus selon les options sélectionnées lors de la création du projet et les modifications apportées au projet.
 
-## <a name="update-the-project-file-to-use-21-versions"></a>Mettre à jour le fichier projet pour utiliser les 2.1 versions
+## <a name="update-the-project-file-to-use-21-versions"></a>Mettre à jour le fichier projet pour utiliser les versions 2.1
 
-Mise à jour la *.csproj* fichier projet :
+Mettre à jour le fichier projet :
 
-* Modification `<TargetFramework>netcoreapp2.0</TargetFramework>` vers la version 2.1, qui est `<TargetFramework>netcoreapp2.1</TargetFramework>`.
-* Remplacer la version spécifiée de référence de package « Microsoft.AspNetCore.All » avec la référence de package « Microsoft.AspNetCore.App » pour un logiciel. Vous devrez peut-être ajouter des dépendances qui ont été supprimées de « Microsoft.AspNetCore.All ». Consultez [migration de Microsoft.AspNetCore.All vers Microsoft.AspNetCore.App](xref:fundamentals/metapackage#migrate) et [Microsoft.AspNetCore.App metapackage](xref:fundamentals/metapackage-app). Si vous n’êtes qui ciblent le .NET Framework :
+* Modifier le framework cible pour .NET Core 2.1 en mettant à jour le fichier projet pour `<TargetFramework>netcoreapp2.1</TargetFramework>`.
+* Remplacez la référence de package pour `Microsoft.AspNetCore.All` avec une référence de package pour `Microsoft.AspNetCore.App`. Vous devrez peut-être ajouter des dépendances qui ont été supprimés de `Microsoft.AspNetCore.All`. Pour plus d’informations, consultez <xref:fundamentals/metapackage#migrate> et <xref:fundamentals/metapackage-app>. Pour les applications qui ciblent le .NET Framework :
+  * Ajouter des références de package individuels au lieu d’une référence de métapackage.
+  * Mettre à jour chaque référence de package à la version 2.1.
+* Supprimer les références à **&lt;DotNetCliToolReference&gt;** éléments pour les packages suivants. Ces outils sont regroupés par défaut dans l’interface CLI .NET Core et n’avez pas besoin d’installer séparément.
+  * Microsoft.DotNet.Watcher.Tools (`dotnet watch`)
+  * Microsoft.EntityFrameworkCore.Tools.DotNet (`dotnet ef`)
+  * Microsoft.Extensions.Caching.SqlConfig.Tools (`dotnet sql-cache`)
+  * Microsoft.Extensions.SecretManager.Tools (`dotnet user-secrets`)
+* Facultatif : vous pouvez supprimer le **&lt;DotNetCliToolReference&gt;** élément pour `Microsoft.VisualStudio.Web.CodeGeneration.Tools`. Vous pouvez remplacer cet outil avec une version installée dans le monde entier en exécutant `dotnet tool install -g dotnet-aspnet-codegenerator`.
 
-  * Ajouter des références de package individuels au lieu d’une référence de package meta.
-  * Mettre à jour chaque référence de package à 2.1.
-* Supprimez toutes les références à `<DotNetCliToolReference>` éléments pour les packages de « Microsoft.AspNetCore », « Microsoft.VisualStudio » et « Microsoft.EntityFrameworkCore ». Ces outils ont été remplacés par les outils globales.
-
-Le balisage suivant montre le modèle généré 2.0 *.csproj* fichier projet :
+Le balisage suivant montre le fichier générés par des modèles de 2.0 projet :
 
 [!code-xml[Main](20_21/sample/WebApp20.csproj)]
 
-Le balisage suivant montre le modèle généré 2.1 *.csproj* fichier projet :
+Le balisage suivant montre le fichier de 2.1 projet modèle généré :
 
 [!code-xml[Main](20_21/sample/WebApp21.csproj)]
 
-## <a name="rules-for-projects-targeting-the-shared-runtime"></a>Règles pour les projets qui ciblent le runtime partagé
+## <a name="rules-for-projects-targeting-the-shared-runtime"></a>Règles pour les projets ciblant le runtime partagé
 
 ASP.NET Core inclut les runtimes partagés suivants :
 
 * [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app)
 * [Microsoft.AspNetCore.All](xref:fundamentals/metapackage)
 
-Règles pour les projets qui ciblent le runtime partagé :
+La version spécifiée par la référence de package est le *minimum requis* version. Par exemple, un projet faisant référence à la 2.1.1 versions de ces packages ne s’exécute sur un ordinateur avec uniquement le 2.1.0 runtime est installé.
 
-* Projets faisant référence à la `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` packages doivent la valeur SDK du projet `Microsoft.NET.Sdk.Web` en haut du fichier projet (`<Project Sdk="Microsoft.NET.Sdk.Web">`).
-* Projets faisant référence à des packages ou des projets qui font référence à transitivement `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`:
-  * Doit définir le Kit de développement du projet `Microsoft.NET.Sdk.Web` en haut du fichier projet (`<Project Sdk="Microsoft.NET.Sdk.Web">`).
-  * Doit référencer le même package d’exécution partagé. Si LibraryA fait référence à `Microsoft.AspNetCore.App`, tous les projets référençant LibraryA doivent également référencer `Microsoft.AspNetCore.App`.
-* Projets exécutables (projets qui contiennent des applications qui sont lancées avec `dotnet run` ou applications qui s’exécutent et tester des projets pour les applications) ne doit pas spécifier une version pour `Microsoft.AspNetCore.App`. Le Kit de développement spécifie la version implicitement via `<PackageReference Include="Microsoft.AspNetCore.App" />`.
-* Projets référencés (projets qui ne sont pas le point d’entrée et les références de projet `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`) doit spécifier une version du package.
+Problèmes connus pour les projets ciblant le runtime partagé :
 
-## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications apportées à tirer parti des nouvelle idiomes basée sur le code qui sont recommandés dans ASP.NET Core 2.1
+* À l’aide de `Microsoft.AspNetCore.App` 2.1.0 avec Entity Framework Core 2.1.1 provoque des échecs de restauration NuGet en raison de conflits de package. La solution recommandée consiste à mettre à niveau `Microsoft.AspNetCore.App` à 2.1.1. Pour plus d’informations, consultez [Packages qui partagent des dépendances avec Microsoft.AspNetCore.App ne peut pas référencer les versions correctives](https://github.com/aspnet/Universe/issues/1180).
+* Tous les projets qui doivent utiliser `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App` doit d’ajouter une référence de package pour le package dans le fichier projet, même s’ils contiennent une référence de projet à un autre projet à l’aide `Microsoft.AspNetCore.All` ou `Microsoft.AspNetCore.App`.
+
+  Exemple :
+
+  - `MyApp` a une référence de package à `Microsoft.AspNetCore.App`.
+  - `MyApp.Tests` a une référence de projet à `MyApp.csproj`.
+  
+  Ajoutez une référence de package pour `Microsoft.AspNetCore.App` à `MyApp.Tests`. Pour plus d’informations, consultez [test d’intégration est difficile à configurer et peut entraîner la rupture pour la maintenance de l’infrastructure partagée](https://github.com/aspnet/Home/issues/3156).
+
+## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications pour tirer parti des nouveaux idiomes basée sur le code qui sont recommandés dans ASP.NET Core 2.1
 
 ### <a name="changes-to-main"></a>Modifications apportées à la Main
 
-Les images suivantes montrent les modifications apportées à la basée sur un modèle généré *Program.cs* fichier.
+Les illustrations suivantes décrivent les modifications apportées à le basé sur un modèle généré *Program.cs* fichier.
 
 ![différences de version ancienne](20_21/_static/main20.png)
 
-L’image précédente, la version 2.0 avec les suppressions est affichée en rouge.
+L’illustration précédente montre la version 2.0 avec les suppressions en rouge.
 
 L’illustration suivante montre le code 2.1. Le code en vert remplacé la version 2.0 :
 
@@ -89,71 +98,71 @@ La nouvelle `Main` remplace l’appel à `BuildWebHost` avec [CreateWebHostBuild
 
 ### <a name="changes-to-startup"></a>Modifications apportées au démarrage
 
-Le code suivant montre les modifications de code de modèle 2.1 généré. Toutes les modifications sont nouvellement ajoutées du code, à ceci près que `UseBrowserLink` a été supprimé :
+Le code suivant montre les modifications de code de modèle 2.1 généré. Toutes les modifications sont nouvellement ajoutées du code, à ceci près que `UseBrowserLink` a été supprimée :
 
 [!code-csharp[Main](20_21/sample/Startup.cs?highlight=3,4,21-26,30,42,45,47)]
 
-Les modifications de code précédent sont détaillées dans :
+Les modifications de code précédentes sont détaillées dans :
 
-* [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr) pour `CookiePolicyOptions` et `UseCookiePolicy`.
-* [Protocole de sécurité stricte de Transport HTTP (HSTS)](xref:security/enforcing-ssl#http-strict-transport-security-protocol-hsts) pour `UseHsts`.
-* [Exiger HTTPS](xref:security/enforcing-ssl#require-https) pour `UseHttpsRedirection`.
+* [Prise en charge de RGPD dans ASP.NET Core](xref:security/gdpr) pour `CookiePolicyOptions` et `UseCookiePolicy`.
+* [Protocole de sécurité Strict Transport HTTP (HSTS)](xref:security/enforcing-ssl#http-strict-transport-security-protocol-hsts) pour `UseHsts`.
+* [Exiger s-HTTP](xref:security/enforcing-ssl#require-https) pour `UseHttpsRedirection`.
 * [SetCompatibilityVersion](xref:fundamentals/startup#setcompatibilityversion) pour `SetCompatibilityVersion(CompatibilityVersion.Version_2_1)`.
 
 ## <a name="changes-to-authentication-code"></a>Modifications apportées au code d’authentification
 
 ASP.NET Core 2.1 fournit [ASP.NET Core Identity](xref:security/authentication/identity) comme un [bibliothèque de classes Razor](xref:razor-pages/ui-class) (RCL).
 
-La valeur par défaut 2.1 l’interface utilisateur de l’identité ne fournit actuellement les nouvelles fonctionnalités importantes sur la version 2.0. Remplacement d’identité avec le package RCL est facultative. Les avantages liés au remplacement du modèle généré identité code avec la version RCL incluent :
+La valeur par défaut 2.1 l’interface utilisateur de l’identité ne fournit actuellement les nouvelles fonctionnalités importantes sur la version 2.0. Le remplacement d’identité avec le package RCL est facultatif. Les avantages de remplacement du modèle généré identité code avec la version RCL incluent :
 
 * Nombre de fichiers est déplacé en dehors de votre arborescence source.
-* Toutes les résolutions de bogues ou les nouvelles fonctionnalités permettant d’identité sont incluses dans le [Microsoft.AspNetCore.App metapackage](xref:fundamentals/metapackage-app). Vous obtenez automatiquement l’identité mise à jour lorsque `Microsoft.AspNetCore.App` est mis à jour.
+* Les résolutions de bogues ou les nouvelles fonctionnalités à l’identité sont incluses dans le [Microsoft.AspNetCore.App métapackage](xref:fundamentals/metapackage-app). Vous obtenez automatiquement l’identité mis à jour lorsque `Microsoft.AspNetCore.App` est mis à jour.
 
-Si vous avez apporté non trivial identité code généré par les modifications apportées au modèle :
+Si vous avez apporté non triviale modifications au modèle généré code d’identité :
 
-* Les avantages ci-dessus ne justifient pas convertir le la version RCL.
-* Vous pouvez conserver votre code ASP.NET Core 2.0 Identity, il est entièrement pris en charge.
+* Les avantages ci-dessus probablement faire **pas** justifier convertir le la version RCL.
+* Vous pouvez conserver votre code ASP.NET Core Identity 2.0, il est entièrement pris en charge.
 
-Identité 2.1 expose les points de terminaison avec le `Identity` zone. Par exemple, le tableau suivant présente des exemples de points de terminaison d’identité qui changent de 2.0 à 2.1 :
+Identité 2.1 expose des points de terminaison avec le `Identity` zone. Par exemple, le tableau suivant présente des exemples de points de terminaison d’identité qui changent à partir de 2.0 à la version 2.1 :
 
-| VERSION 2.0 URL DE LA         | 2.1 URL |
+| 2.0 URL         | 2.1 URL DE |
 | --------------- | ------------ |
-| / / Connexion au compte  | / / Compte/connexion de l’identité |
-| / Compte/déconnexion | / Identité/compte/déconnexion |
+| / / Connexion au compte  | / Identity/Account/Login |
+| / Compte/déconnexion | Identité/compte/déconnecter |
 | / Compte/gérer | / Identité/compte/gérer |
 
-Les applications qui ont le code à l’aide d’identité et 2.0 de remplacer l’interface utilisateur de l’identité à la nécessité d’identité bibliothèque 2.1 pour prendre en compte les URL d’identité ont `/Identity` segment ajouté à l’URI. Pour gérer les nouveaux points de terminaison identité consiste à configurer redirections, par exemple, à partir de `/Account/Login` à `/Identity/Account/Login`.
+Les applications qui ont du code à l’aide d’identité et 2.0 de remplacer l’interface utilisateur de l’identité et la nécessité de bibliothèque d’identités 2.1 à prendre en compte les URL d’identité ont `/Identity` segment devant les URI. Pour gérer les nouveaux points de terminaison identité consiste à configurer redirections, par exemple, à partir de `/Account/Login` à `/Identity/Account/Login`.
 
 ### <a name="update-identity-to-version-21"></a>Identité de mise à jour vers la version 2.1
 
-Les options suivantes sont disponibles pour mettre à jour d’identité à 2.1.
+Les options suivantes sont disponibles pour mettre à jour d’identité à la version 2.1.
 
-* Utilisez le code de l’identité UI 2.0 sans aucune modification. À l’aide de code 2.0 de l’interface utilisateur d’identité est entièrement pris en charge. Il s’agit d’une bonne approche lorsque significatif modifications ont été apportées au code généré d’identité.
-* Supprimer votre code d’identité 2.0 existant et [Scaffold identité](xref:security/authentication/scaffold-identity) dans votre projet. Votre projet utilise le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Vous pouvez générer du code et l’interface utilisateur pour le code de l’interface utilisateur de l’identité que vous avez modifié. Appliquer vos modifications du code pour le code de l’interface utilisateur qui vient d’être modèle généré automatiquement.
-* Supprimer votre code d’identité 2.0 existant et [Scaffold identité](xref:security/authentication/scaffold-identity) dans votre projet avec l’option de **remplacer tous les fichiers**.
+* Utilisez le code de l’identité UI 2.0 sans aucune modification. Code 2.0 de l’interface utilisateur d’identité sont entièrement pris en charge. Il s’agit d’une bonne approche lorsque significatif modifications ont été apportées au code d’identité généré.
+* Supprimer votre code d’identité 2.0 existant et [identité d’une structure](xref:security/authentication/scaffold-identity) dans votre projet. Votre projet va utiliser le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Vous pouvez générer du code et l’interface utilisateur pour le code de l’interface utilisateur de l’identité que vous avez modifié. Appliquez vos modifications de code dans le code de l’interface utilisateur qui vient d’être généré automatiquement.
+* Supprimer votre code d’identité 2.0 existant et [une structure identité](xref:security/authentication/scaffold-identity) dans votre projet avec l’option à **remplacer tous les fichiers**.
 
-### <a name="replace-identity-20-ui-with-the-identity-21-razor-class-library"></a>Remplacez l’identité 2.0 l’interface utilisateur avec la bibliothèque de classes de Razor identité 2.1
+### <a name="replace-identity-20-ui-with-the-identity-21-razor-class-library"></a>Remplacez l’identité 2.0 interface utilisateur avec la bibliothèque de classes Razor identité 2.1
 
-Cette section décrit les étapes pour remplacer le code d’identité ASP.NET Core 2.0 modèle généré avec la [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Les étapes suivantes sont pour un projet de Pages Razor, mais l’approche pour un projet MVC est similaire.
+Cette section décrit les étapes pour remplacer le code d’identité générée de modèle ASP.NET Core 2.0 avec le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Les étapes suivantes sont pour un projet de Pages Razor, mais l’approche pour un projet MVC est similaire.
 
 * Vérifiez le [fichier projet est mis à jour pour utiliser les 2.1 versions](#update-the-project-file-to-use-21-versions)
 * Supprimez les dossiers suivants et tous les fichiers dans les :
   * *Contrôleurs*
-  * *Pages ou du compte /*
+  * *Pages/compte /*
   * *Extensions*
 * Générez le projet.
-* [Structurez identité](xref:security/authentication/scaffold-identity) dans votre projet :
-  * Sélectionnez les projets en cours de fermeture *_Layout.cshtml* fichier.
+* [Structurer identité](xref:security/authentication/scaffold-identity) dans votre projet :
+  * Sélectionnez les projets quitter *_Layout.cshtml* fichier.
   * Sélectionnez le **+** icône sur le côté droit de la **classe de contexte de données**. Acceptez le nom par défaut.
-  * Sélectionnez **ajouter** pour créer une nouvelle classe de contexte de données. Création d’un nouveau contexte de données est requis pour structurer. Vous supprimez le nouveau contexte de données dans la section suivante.
+  * Sélectionnez **ajouter** pour créer une nouvelle classe de contexte de données. Création d’un nouveau contexte de données est requis pour générer automatiquement. Vous supprimez le nouveau contexte de données dans la section suivante.
 
 ### <a name="update-after-scaffolding-identity"></a>Mettre à jour après la génération de modèles automatique identité
 
-* Supprimer le scaffolder d’identité générée `IdentityDbContext` classe dérivée dans la *zones / / donnéesd’identité/* dossier.
+* Supprimer la génération de modèles automatique identité générée `IdentityDbContext` classe dérivée dans la *zones/Identity/Data/* dossier.
 * Supprimer *Areas/Identity/IdentityHostingStartup.cs*
-* Mise à jour la *_LoginPartial.cshtml* fichier :
+* Mise à jour le *_LoginPartial.cshtml* fichier :
   * Déplacer *Pages/_LoginPartial.cshtml* à *Pages/Shared/_LoginPartial.cshtml*
-  * Ajoutez `asp-area="Identity"` aux liens achor et du formulaire.
+  * Ajouter `asp-area="Identity"` les liens du formulaire et achor.
   * Mise à jour le `<form />` élément à `    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`
 
   Le code suivant illustre la mise à jour *_LoginPartial.cshtml* fichier :
@@ -164,19 +173,19 @@ Mise à jour `ConfigureServices` par le code suivant :
 
 [!code-csharp[Main](20_21/sample/Startup2.cs?name=snippet)]
 
-## <a name="changes-to-razor-pages-projects-razor-files"></a>Modifie les projets de fichiers Razor pour les Pages Razor
+## <a name="changes-to-razor-pages-projects-razor-files"></a>Modifie les projets fichiers Razor pages Razor
 
 ### <a name="the-layout-file"></a>Le fichier de disposition
 
-* Déplacer *Pages/_Layout.cshtml* à *Pages/Shared/_Layout.cshtml*
-* Le *Layout.cshtml* fichier comprend les modifications suivantes :
+* Déplacer *pages/_Layout.cshtml* à *Pages/Shared/_Layout.cshtml*
+* Le *Layout.cshtml* fichier intègre les modifications suivantes :
 
   * `<partial name="_CookieConsentPartial" />` est ajouté. Pour plus d’informations, consultez [Prise en charge du RGPD dans ASP.NET Core](xref:security/gdpr).
   * jQuery remplace 2.2.0 3.3.1
 
 ### <a name="validationscriptspartialcshtml"></a>_ValidationScriptsPartial.cshtml
 
-* *Pages/_ValidationScriptsPartial.cshtml* déplace vers *Pages/Shared/_ValidationScriptsPartial.cshtml*
+* *Pages/_validationscriptspartial.cshtml* déplace vers *Pages/Shared/_ValidationScriptsPartial.cshtml*
 * *jQuery.Validate/1.14.0* devient *jquery.validate/1.17.0*
 
 ### <a name="new-files"></a>Nouveaux fichiers
@@ -186,13 +195,13 @@ Les fichiers suivants sont ajoutés :
 * *Privacy.cshtml*
 * *Privacy.cshtml.cs*
 
-Consultez [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
+Consultez [RGPD prennent en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
 
 ## <a name="changes-to-mvc-projects-razor-files"></a>Modifications apportées aux fichiers de Razor projets MVC
 
 ### <a name="the-layout-file"></a>Le fichier de disposition
 
-Le *Layout.cshtml* fichier comprend les modifications suivantes :
+Le *Layout.cshtml* fichier intègre les modifications suivantes :
 
 * `<partial name="_CookieConsentPartial" />` est ajouté.
 * jQuery remplace 2.2.0 3.3.1
@@ -206,11 +215,11 @@ Le *Layout.cshtml* fichier comprend les modifications suivantes :
 Les éléments suivants sont ajoutés :
 
 * *Views/Home/Privacy.cshtml*
-* Le `Privacy` méthode d’action est ajoutée pour le contrôleur Home.
+* Le `Privacy` méthode d’action est ajoutée au contrôleur Home.
 
-Consultez [PIBR prend en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
+Consultez [RGPD prennent en charge dans ASP.NET Core](xref:security/gdpr) pour plus d’informations sur les fichiers mentionnés précédemment.
 
 ## <a name="additional-changes"></a>Modifications supplémentaires
 
 * [SetCompatibilityVersion](xref:fundamentals/startup#setcompatibilityversion)
-* [Configuration de transport](xref:fundamentals/servers/kestrel#transport-configuration)
+* [Configuration du transport](xref:fundamentals/servers/kestrel#transport-configuration)
