--- a/aspnetcore/includes/2.1-SDK.md
+++ b/aspnetcore/includes/2.1-SDK.md
@@ -1,1 +1,1 @@
-[<span data-ttu-id="45448-101">SDK .NET Core 2.1 ou version ultérieure</span><span class="sxs-lookup"><span data-stu-id="45448-101">.NET Core 2.1 SDK or later</span></span>](https://www.microsoft.com/net/download/all)
+[<span data-ttu-id="68cd5-101">SDK .NET Core 2.1 ou version ultérieure</span><span class="sxs-lookup"><span data-stu-id="68cd5-101">.NET Core 2.1 SDK or later</span></span>](https://www.microsoft.com/net/download/all)
