commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -3,14 +3,14 @@ title: Migrer d’ASP.NET Core 2.0 vers 2.1
 author: rick-anderson
 description: Cet article aborde les principes fondamentaux de la migration d’une application ASP.NET Core 2.0 à la version 2.1.
 ms.author: riande
-ms.date: 07/10/2018
+ms.date: 07/25/2018
 uid: migration/20_21
-ms.openlocfilehash: 392771bc1fdd348834a8b0f877d455e0fc9c7c6c
-ms.sourcegitcommit: 19cbda409bdbbe42553dc385ea72d2a8e246509c
+ms.openlocfilehash: a65e23b5e97bd847f9bbb2543df8f8a1c9cc6256
+ms.sourcegitcommit: c8e62aa766641aa55105f7db79cdf2b27a6e5977
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 07/12/2018
-ms.locfileid: "38992975"
+ms.lasthandoff: 07/25/2018
+ms.locfileid: "39254842"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrer d’ASP.NET Core 2.0 vers 2.1
 
@@ -71,12 +71,23 @@ Problèmes connus pour les projets ciblant le runtime partagé :
 
   Exemple :
 
-  - `MyApp` a une référence de package à `Microsoft.AspNetCore.App`.
-  - `MyApp.Tests` a une référence de projet à `MyApp.csproj`.
+  * `MyApp` a une référence de package à `Microsoft.AspNetCore.App`.
+  * `MyApp.Tests` a une référence de projet à `MyApp.csproj`.
   
   Ajoutez une référence de package pour `Microsoft.AspNetCore.App` à `MyApp.Tests`. Pour plus d’informations, consultez [test d’intégration est difficile à configurer et peut entraîner la rupture pour la maintenance de l’infrastructure partagée](https://github.com/aspnet/Home/issues/3156).
 
 ## <a name="changes-to-take-advantage-of-the-new-code-based-idioms-that-are-recommended-in-aspnet-core-21"></a>Modifications pour tirer parti des nouveaux idiomes basée sur le code qui sont recommandés dans ASP.NET Core 2.1
+
+## <a name="update-to-the-21-docker-images"></a>Mettre à jour vers les images de Docker 2.1
+
+Dans ASP.NET Core 2.1, les images Docker migré vers le [du référentiel GitHub dotnet/dotnet-docker](https://github.com/dotnet/dotnet-docker). Le tableau suivant présente le Docker image et étiquette de modifications :
+
+|2.0      |2.1      |
+|---------|---------|
+|Microsoft / aspnetcore:2.0        |Microsoft / dotnet:2.1-aspnetcore-runtime |
+|Microsoft/aspnetcore-build : 2.0  |Microsoft / dotnet:2.1-sdk |
+
+Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les balises et nouveaux noms d’image dans la colonne 2.1 de la table précédente. Pour plus d’informations, consultez [migration à partir de référentiels de docker aspnetcore à dotnet](https://github.com/aspnet/Announcements/issues/298).
 
 ### <a name="changes-to-main"></a>Modifications apportées à la Main
 
@@ -137,7 +148,7 @@ Les applications qui ont du code à l’aide d’identité et 2.0 de remplacer l
 
 Les options suivantes sont disponibles pour mettre à jour d’identité à la version 2.1.
 
-* Utilisez le code de l’identité UI 2.0 sans aucune modification. Code 2.0 de l’interface utilisateur d’identité sont entièrement pris en charge. Il s’agit d’une bonne approche lorsque significatif modifications ont été apportées au code d’identité généré.
+* Utilisez le code de l’identité UI 2.0 sans aucune modification. Code 2.0 de l’interface utilisateur d’identité sont entièrement pris en charge. Il s’agit d’une bonne approche lorsque des modifications significatives ont été apportées au code d’identité généré.
 * Supprimer votre code d’identité 2.0 existant et [identité d’une structure](xref:security/authentication/scaffold-identity) dans votre projet. Votre projet va utiliser le [ASP.NET Core Identity](xref:security/authentication/identity) [bibliothèque de classes Razor](xref:razor-pages/ui-class). Vous pouvez générer du code et l’interface utilisateur pour le code de l’interface utilisateur de l’identité que vous avez modifié. Appliquez vos modifications de code dans le code de l’interface utilisateur qui vient d’être généré automatiquement.
 * Supprimer votre code d’identité 2.0 existant et [une structure identité](xref:security/authentication/scaffold-identity) dans votre projet avec l’option à **remplacer tous les fichiers**.
 
@@ -158,12 +169,12 @@ Cette section décrit les étapes pour remplacer le code d’identité généré
 
 ### <a name="update-after-scaffolding-identity"></a>Mettre à jour après la génération de modèles automatique identité
 
-* Supprimer la génération de modèles automatique identité générée `IdentityDbContext` classe dérivée dans la *zones/Identity/Data/* dossier.
+* Supprimer la génération de modèles automatique identité générée `IdentityDbContext` classe dérivée de la *zones/Identity/Data/* dossier.
 * Supprimer *Areas/Identity/IdentityHostingStartup.cs*
 * Mise à jour le *_LoginPartial.cshtml* fichier :
   * Déplacer *Pages/_LoginPartial.cshtml* à *Pages/Shared/_LoginPartial.cshtml*
-  * Ajouter `asp-area="Identity"` les liens du formulaire et achor.
-  * Mise à jour le `<form />` élément à `    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`
+  * Ajouter `asp-area="Identity"` aux liens d’ancrage et du formulaire.
+  * Mise à jour le `<form />` élément à `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">`
 
   Le code suivant illustre la mise à jour *_LoginPartial.cshtml* fichier :
 
